--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-org/hooks",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "curated list of reusable custom hooks",
   "author": "https://github.com/naiduprakash",
   "license": "MIT",
@@ -16,8 +16,7 @@
   },
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "prepare": "run-s build"
+    "start": "microbundle-crl watch --no-compress --format modern,cjs"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -44,5 +43,5 @@
   "files": [
     "dist"
   ],
-  "gitHead": "87671a33c12b0518479dd3558cd48ee430078340"
+  "gitHead": "6cb9818d66876183f9eb6961620850d9c5323e6a"
 }
