--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -15,9 +15,23 @@
   "engines": {
     "node": ">=10"
   },
+  "eslintConfig": {
+    "extends": [
+      "standard",
+      "standard-jsx",
+      "standard-react",
+      "prettier",
+      "plugin:react-hooks/recommended"
+    ],
+    "env": {
+      "node": true,
+      "browser": true
+    }
+  },
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs"
+    "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "lint": "eslint src/ --max-warnings 0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -35,6 +49,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
